# guacamole-client

./: .asf.yaml  .dockerignore  .gitignore  .ratignore  .travis.yml  AGENTS.md  BUILD-AND-DEPLOY.md  CONTRIBUTING  DOCKER-DEPLOYMENT.md  Dockerfile  Dockerfile.alpine  FILE-LOCATION-EXPLANATION.md  KEYCLOAK-ROLES-SETUP.md  KEYCLOAK-SETUP.md  LICENSE  NOTICE  QUICK-START.md  README  README-FULL-SETUP.md  README-TEST.md  SECURITY.md  THREAT_MODEL.md  docker-compose-full.yml  docker-compose-keycloak.yml  docker-compose.yml  package-lock.json  pom.xml  project-assembly.xml  start-all.sh  start-full.sh  test-setup.sh  user-mapping-example-README.md  user-mapping-example.xml
extensions/: .ratignore  pom.xml
guacamole/: .gitignore  .package.dsc  .ratignore  ChangeLog  Makefile  build.xml  (+1 more)
guacamole-common/: .gitignore  .package.dsc  ChangeLog  Doxyfile  README  pom.xml
guacamole-common-js/: .gitignore  ChangeLog  README  jsdoc-conf.json  karma-ci.conf.js  package-lock.json  package.json  pom.xml  static.xml
guacamole-docker/: Dockerfile  README.md  mozilla-firefox.pref
guacamole-ext/: ChangeLog  pom.xml
guacamole/libguac/: Makefile  Makefile.am  client.c  clientreg.c  configure.in  guacio.c  protocol.c  uuidtree.c
guacamole/libguac/include/: client.h  guacio.h  protocol.h  uuidtree.h
guacamole/libguac/src/: client.c  clientreg.c  guacio.c  protocol.c
guacamole/proxy/: Makefile  base64.c  base64.h  client.c  client.h  configure.in  daemon.c  guacio.c  guacio.h  protocol.c  protocol.h  proxy.c  proxy.h  vnc_client.c  vnc_client.h
guacamole/proxy/src/: daemon.c
(+6521 files in other folders)
